# PointDenseBEV

./: README.md  requirements.txt  setup.py
datasets/dense_kitti/: test_sample.pkl  train_sample.pkl
logs/model/kitti_models/test_pillarnet_128/pretrain/eval/eval_without_train/eval_all_default/default/: log_eval_20260322-152654.txt
logs/model/kitti_models/test_pillarnet_128/pretrain/eval/eval_without_train/eval_all_default/default/epoch_11/val/: eval_11.txt
mapping/: CMakeLists.txt
mapping/build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
pcdet/: config.py
pcdet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pcdet/datasets/: __init__.py  dataset.py
pcdet/datasets/augmentor/: augmentor_utils.py  data_augmentor.py
pcdet/datasets/kitti/: kitti_utils.py
pcdet/datasets/processor/: data_processor.py  point_processor.py
pcdet/models/: __init__.py
pcdet/models/backbones_2d/map_to_bev/: pointpillar_scatter.py
pcdet/models/backbones_3d/vfe/: pillar_vfe.py
pcdet/models/backbones_image/: __init__.py  swin.py
pcdet/models/backbones_image/img_neck/: generalized_lss.py
pcdet/models/detectors/: detector3d_template.py  pointpillar.py
pcdet/models/detectors/unet/: resunet.py
pcdet/ops/pointnet2/pointnet2_batch/src/: ball_query.cpp  group_points.cpp  interpolate.cpp  sampling.cpp
pcdet/ops/pointnet2/pointnet2_stack/src/: ball_query.cpp  interpolate.cpp  sampling.cpp
pcdet/utils/: common_utils.py
scene_reconstruction/cli/: eval.py  export.py  main.py
scene_reconstruction/core/: transform.py  volume.py
scene_reconstruction/data/nuscenes/: dataset.py  parse.py  polars_helpers.py  scene_flow.py
scene_reconstruction/eval/: lidar_depth.py
scene_reconstruction/math/: spherical_coordinate_system.py
scene_reconstruction/occupancy/: grid.py  temporal_transmission_and_reflection.py  transmission_reflection.py
scene_reconstruction/visualization/export/: image.py
scene_reconstruction/visualization/open3d/: volume.py
tools/: run_test.py  run_test_one.py  run_train.py  test.sh  train.sh  train_test.py  vis  visualize_lidar_image_frustum.py
tools/cfgs/dataset_configs/: kitti_dataset.yaml
tools/cfgs/kitti_models/: test_pillarnet.yaml  test_pillarnet_128.yaml
tools/cfgs/nuscenes_models/: cbgs_pp_multihead.yaml
tools/eval_utils/: eval_utils.py
tools/train_utils/: train_utils.py
tools/train_utils/optimization/: __init__.py  learning_schedules_fastai.py
voxelize/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dense.cpp
